--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "type": "module",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -20,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "process-csv": "node scripts/process-csv.js"
+    "init": "node scripts/download-data.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -31,6 +30,7 @@
     "@nestjs/platform-fastify": "^8.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.0",
     "fastify-helmet": "^7.0.1",
     "mongoose": "^6.2.8",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +49,9 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cli-progress": "^3.10.0",
+    "collect.js": "^4.32.0",
+    "consola": "^2.15.3",
     "csv-reader": "^1.0.8",
     "csv-stream": "^0.2.0",
     "download": "^8.0.0",
@@ -56,7 +59,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
-    "log-update": "^5.0.0",
     "prettier": "^2.3.2",
     "progress-stream": "^2.0.0",
     "source-map-support": "^0.5.20",
