--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "init": "node scripts/download-data.js"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -30,7 +29,6 @@
     "@nestjs/platform-fastify": "^8.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "dotenv": "^16.0.0",
     "fastify-helmet": "^7.0.1",
     "mongoose": "^6.2.8",
     "reflect-metadata": "^0.1.13",
@@ -41,26 +39,17 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@stdlib/os-tmpdir": "^0.0.8",
-    "@types/download": "^8.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "cli-progress": "^3.10.0",
-    "collect.js": "^4.32.0",
-    "consola": "^2.15.3",
-    "csv-reader": "^1.0.8",
-    "csv-stream": "^0.2.0",
-    "download": "^8.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
-    "progress-stream": "^2.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
