--- a/backend/package.json
+++ b/backend/package.json
@@ -30,13 +30,16 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.4.2",
     "bull": "^4.8.1",
+    "cache-manager": "^3.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dot-prop": "6.0.1",
     "fastify-helmet": "^7.0.1",
     "ioredis": "^4.28.5",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
     "nest-winston": "^1.6.2",
+    "p-map": "4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -47,6 +50,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bull": "^3.15.8",
+    "@types/cache-manager": "^3.4.3",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "27.4.1",
