--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.4.2",
+    "@nestjs/schedule": "^1.0.2",
     "bull": "^4.8.1",
     "cache-manager": "^3.6.0",
     "class-transformer": "^0.5.1",
@@ -51,6 +52,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/bull": "^3.15.8",
     "@types/cache-manager": "^3.4.3",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "27.4.1",
