--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
+    "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-chartjs": "^4.0.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
